--- a/README
+++ b/README
@@ -1,3 +1,6 @@
-Scandinavian Agile conference: http://www.scan-agile.org/
-Session: http://www.scan-agile.org/?page_id=126
-http://www.linkedin.com/in/lucaminudel
+#Software development in F1 - challenges, complexity and struggle for excellence
+
+- The [slides] (https://github.com/lucaminudel/scan-agile-2011/blob/master/Software%20development%20in%20F1%20-%20challenges,%20complexity%20and%20struggle%20for%20excellence.pdf?raw=true)
+- The [paper] (https://github.com/lucaminudel/scan-agile-2011/blob/master/CSP_Applicant_Luca_Minudel.pdf?raw=true)
+- The [session] (http://scan-agile.org/archive/scan-agile-2011/speakers/luca-minudel/index.html)
+
